--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,10 +22,11 @@
     "max-len": [
       "error",
       {
-        "code": 120,
+        "code": 200,
         "ignoreComments": true, // 주석 제외
         "ignoreStrings": true, // 문자열 제외
-        "ignoreTemplateLiterals": true // 템플릿 리터럴 제외
+        "ignoreTemplateLiterals": true, // 템플릿 리터럴 제외,
+        "ignorePattern": "^import\\s.+\\sfrom\\s.+;$" // import 제외
       }
     ],
     "no-console": "warn", // console.log 경고
